# mazeman

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: res.bundleconf
res/shaders/: sprite.vert.glsl
resources/: mazeman.ldtk  world.ldtk
shaders/: CMakeLists.txt  newSprite.frag  newSprite.vert  sprite.frag  sprite.glsl  sprite.vert
src/: CMakeLists.txt  Camera2D.cpp  Camera2D.hpp  Game.cpp  Game.h  Game.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  StringUtils.hpp  Texture2D.cpp  Texture2D.hpp  Transformable.cpp  Transformable.hpp  Window.cpp  main.cpp
src/Components/: CMakeLists.txt
src/Game/: CMakeLists.txt  Game.cpp  Game.h  Game.hpp  main.cpp
src/Game/Components/: CMakeLists.txt  Collision.h  Player.hpp
src/Game/GUI/: CMakeLists.txt  DemoWindow.hpp
src/Game/Prefabs/: CMakeLists.txt  Mazeman.cpp  Mazeman.hpp  Pacman.cpp  Pacman.hpp
src/Game/Systems/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.hpp  InputSystem.cpp  InputSystem.h  InputSystem.hpp
src/Graphics/: CMakeLists.txt  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Window.cpp  Window.hpp
src/Inari/: BaseGame.cpp  BaseGame.h  CMakeLists.txt  GameServices.cpp  GameServices.h  IGame.cpp  IGame.h  IGame.hpp  IService.h  InputManager.cpp  InputManager.h  InputManager.hpp
src/Inari/Assets/: AssetMaker.h  AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  IAsset.h  Shader.cpp  Shader.h  ShaderMaker.cpp  ShaderMaker.h  Texture2D.cpp  Texture2D.h  Texture2DMaker.cpp  Texture2DMaker.h  World.cpp  World.h  WorldMaker.cpp  WorldMaker.h
src/Inari/Assets/Shaders/: CMakeLists.txt  SpriteShader.h
src/Inari/ECS/: CMakeLists.txt  EntityRegistry.cpp  EntityRegistry.h  EntityRegistry.hpp  SystemRegistry.cpp  SystemRegistry.h  SystemRegistry.hpp
src/Inari/ECS/Components/: AnimationSprite.hpp  CMakeLists.txt  RigidBody.hpp  Sprite.hpp  Transform.h  Transform.hpp  Transformation.hpp
src/Inari/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.h  AnimationSystem.hpp  CMakeLists.txt  ISystem.h  ISystem.hpp  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsSystem.hpp  SpriteRenderSystem.cpp  SpriteRenderSystem.h  SpriteRenderSystem.hpp
src/Inari/EntityRegistry/: CMakeLists.txt  Registry.cpp  Registry.hpp
src/Inari/GUI/: CMakeLists.txt  GUIManager.cpp  GUIManager.hpp  GUIWindow.cpp  GUIWindow.hpp
src/Inari/Graphics/: AttributeData.hpp  CMakeLists.txt  Primitive.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  SpriteBatch.cpp  SpriteBatch.h  SpriteBatch.hpp  VertexLayout.cpp  VertexLayout.hpp  Window.cpp  Window.h  Window.hpp
src/Inari/Input/: CMakeLists.txt  InputManager.cpp  InputManager.hpp
src/Inari/Resources/: CMakeLists.txt  IResource.cpp  IResource.hpp  LevelMap.cpp  LevelMap.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceStorage.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  World.cpp  World.hpp
src/Inari/Utils/: CMakeLists.txt  Camera2D.cpp  Camera2D.h  Camera2D.hpp  Colors.hpp  GameTime.cpp  GameTime.h  GameTime.hpp  Math.hpp  Random.cpp  Random.hpp  Strings.h  Strings.hpp
src/Prefabs/: CMakeLists.txt  Mazeman.cpp  Mazeman.h
src/ResourceManager/: BaseResourceManager.cpp  BaseResourceManager.hpp  BundleReader.cpp  BundleReader.hpp  CMakeLists.txt  ResourceManager.cpp  ResourceManager.hpp
src/Resources/: CMakeLists.txt  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceStorage.hpp  ResourceType.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp
src/Systems/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h
src/Utils/: CMakeLists.txt  Camera2D.hpp  Colors.hpp  GameTime.cpp  GameTime.hpp  Math.hpp  Random.cpp  Random.hpp  Strings.hpp
tools/: bundler.py  embed.lua  embedshader.lua
